...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contestsList_fl"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/contestsList_rv"
        android:name="com.przemolab.oknotifier.fragments.ContestsListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ContestsListFragment"
        tools:listitem="@layout/item_contest"/>

...
        android:id="@+id/empty_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/sync_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:background="@android:color/transparent"
            android:contentDescription="@string/sync_contest"
            android:src="@drawable/ic_sync"
...
