<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sync_menu_item"
        android:icon="@drawable/ic_sync_white"
        android:title="@string/sync_contest"
        app:showAsAction="ifRoom" />

    <!-- TODO: change icon -->
    <item
        android:id="@+id/set_widget_menu_item"
        android:title="@string/set_widget"
        android:checkable="true"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="ifRoom" />

</menu>