...
    android:layout_marginStart="@dimen/margin_small"
    android:layout_marginEnd="@dimen/margin_small"
    android:layout_marginTop="@dimen/margin_small"
    android:elevation="@dimen/cardview_default_elevation">

    <FrameLayout
        android:id="@+id/contestItem_fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGreen">

        <LinearLayout
            android:layout_width="wrap_content"
...
