...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contestsList_fl"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/contestantsList_rv"
        android:name="com.przemolab.oknotifier.fragments.ContestantsListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ContestantsListFragment"
        tools:listitem="@layout/item_contestant" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/empty_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/sync_ib"
...
